# stock-tracker

./: .gitignore  CMakeLists.txt  INSTALL.md  Info.plist.in  MVC_notes.md  README.md  Signals and threads.md  Treemap tiling notes.md  resources.qrc
.github/workflows/: build.yml
src/: autoscalechartview.hpp  countdowntimer.cpp  countdowntimer.hpp  datamanager.cpp  datamanager.hpp  downloadprogress.cpp  downloadprogress.hpp  global.hpp  heatmappainter.cpp  heatmappainter.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  sliw.cpp  sliw.hpp  stock.cpp  stock.hpp  stockdatafetcher.cpp  stockdatafetcher.hpp
